@@ -60,6 +60,7 @@ export("+.section",
        drawDirectionField,
        drawIsopycnals,
        drawPalette,
+       drifterGrid,
        eclipticalToEquatorial,
        elevation,
        enuToOther,
